# elec-wiki

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/: .pages
docs/application_note/: .pages
docs/application_note/key_detection/: .pages
docs/application_note/key_detection/matrix/: index.md
docs/instrumentation/: .pages
docs/instrumentation/oscilloscope/: .pages
docs/instrumentation/oscilloscope/basic_usage/: .pages  index.md
docs/instrumentation/oscilloscope/coupling/: index.md
docs/instrumentation/oscilloscope/cursor/: index.md
docs/instrumentation/oscilloscope/math/: index.md
docs/instrumentation/oscilloscope/measure/: index.md
docs/instrumentation/oscilloscope/overview/: index.md
docs/instrumentation/oscilloscope/probe_compensation/: index.md
docs/instrumentation/oscilloscope/trigger/: index.md
docs/instrumentation/oscilloscope/xy_mode/: index.md
docs/introduce/: .pages
docs/introduce/about/: .pages  index.md
docs/introduce/homepage/: index.md
docs/javascripts/: katex.js  main.js
docs/overrides/: main.html
docs/stm32/: .pages
docs/stm32/clock_tree/: index.md
docs/stm32/communication/: .pages
docs/stm32/communication/i2c_protocol/: .pages  index.md
docs/stm32/communication/serial_timing/: .pages  AsyncClockDiff.py  index.md
docs/stm32/communication/spi_protocol/: .pages  index.md
docs/stm32/gpio/: .pages
docs/stm32/gpio/input/: index.md
docs/stm32/multi_file_project/: .pages  index.md
docs/stm32/systick/: .pages
docs/stm32/timer/: .pages
docs/stm32/volatile_qualified/: index.md
hooks/: homepage.py
(+15 files in other folders)
