[tool.poetry]
name = "elec-wiki"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.4.9"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs = "^1.5.3"
mkdocs-git-authors-plugin = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
